# CS333_Final_Project

./: README.md  board.py  main.py  player.py  pyproject.toml  setup.py  tempCodeRunnerFile.py  unitTest.py
.github/workflows/: autoBuild.yml  autoTest.yml
src/: __init__.py  board.py  main.py  player.py
src/CS333_Final_Project_Matthew_Stenvold.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
