[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CS333_Final_Project-Matthew-Stenvold"
version = "0.0.1"
authors = [
  { name="Matthew Stenvold", email="stenvoldm@nevada.unr.edu" },
]
description = "A game of minesweeper played through the terminal"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stenvold-Matthew/CS333_Final_Project"
"Bug Tracker" = "https://github.com/Stenvold-Matthew/CS333_Final_Project/issues"